Implement split panel functionality with drag-and-drop support for tabs. Added buttons for vertical and horizontal splits, enhanced CSS for split containers, and updated JavaScript to manage pane states and tab movements. Improved README to document new split panel feature.

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                                     <span>css</span>
                                 </div>
                                 <ul class="nested-list">
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>style.css</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>theme.css</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>reset.css</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>dark.css</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>light.css</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>style.css</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>theme.css</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>reset.css</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>dark.css</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>light.css</span></div></li>
                                 </ul>
                             </li>
                             <li class="folder open">
@@ -87,12 +87,12 @@
                                     <span>js</span>
                                 </div>
                                 <ul class="nested-list">
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>main.js</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>utils.js</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>api.js</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>dom.js</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>test.js</span></div></li>
-                                    <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>mock.js</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>main.js</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>utils.js</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>api.js</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>dom.js</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>test.js</span></div></li>
+                                    <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="braces" class="file-icon"></i><span>mock.js</span></div></li>
                                 </ul>
                             </li>
                             <li class="folder open">
@@ -121,13 +121,13 @@
                                     <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="video" class="file-icon"></i><span>presentation.avi</span></div></li>
                                 </ul>
                             </li>
-                            <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-code" class="file-icon"></i><span>index.html</span></div></li>
-                            <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-text" class="file-icon"></i><span>README.md</span></div></li>
-                            <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-json" class="file-icon"></i><span>package.json</span></div></li>
-                            <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-json" class="file-icon"></i><span>tsconfig.json</span></div></li>
-                            <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-text" class="file-icon"></i><span>CHANGELOG.md</span></div></li>
-                            <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-text" class="file-icon"></i><span>CONTRIBUTING.md</span></div></li>
-                            <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-code" class="file-icon"></i><span>about.html</span></div></li>
+                            <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-code" class="file-icon"></i><span>index.html</span></div></li>
+                            <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-text" class="file-icon"></i><span>README.md</span></div></li>
+                            <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-json" class="file-icon"></i><span>package.json</span></div></li>
+                            <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-json" class="file-icon"></i><span>tsconfig.json</span></div></li>
+                            <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-text" class="file-icon"></i><span>CHANGELOG.md</span></div></li>
+                            <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-text" class="file-icon"></i><span>CONTRIBUTING.md</span></div></li>
+                            <li><div class="file-tree-item" draggable="true"><span class="twirldown-placeholder"></span><i data-lucide="file-code" class="file-icon"></i><span>about.html</span></div></li>
                             <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>custom.css</span></div></li>
                             <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>print.css</span></div></li>
                             <li><div class="file-tree-item"><span class="twirldown-placeholder"></span><i data-lucide="file-type" class="file-icon"></i><span>mobile.css</span></div></li>
@@ -212,6 +212,12 @@
                     <span>main.js</span>
                     <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
                 </div>
+                <button class="split-panel-btn" aria-label="Split panel vertically">
+                    <i data-lucide="columns-2"></i>
+                </button>
+                <button class="split-panel-btn split-horizontal" aria-label="Split panel horizontally">
+                    <i data-lucide="rows-2"></i>
+                </button>
             </div>
             <div class="breadcrumb-bar hidden">
                 <div class="breadcrumbs">
@@ -223,8 +229,12 @@
                     </button>
                 </div>
             </div>
-            <div class="editor-content">
-                <p>This is where the content of the selected file will be displayed.</p>
+            <div class="split-container" id="main-split-container">
+                <div class="split-pane" data-pane-id="main-pane-1">
+                    <div class="editor-content">
+                        <p>This is where the content of the selected file will be displayed.</p>
+                    </div>
+                </div>
             </div>
             <div class="resizer resizer-horizontal" id="terminal-drag-handle">
                 <!-- This is the draggable handle for the terminal -->
@@ -241,6 +251,12 @@
                         <span>Logs</span>
                         <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
                     </div>
+                    <button class="split-panel-btn" aria-label="Split panel vertically">
+                        <i data-lucide="columns-2"></i>
+                    </button>
+                    <button class="split-panel-btn split-horizontal" aria-label="Split panel horizontally">
+                        <i data-lucide="rows-2"></i>
+                    </button>
                 </div>
                 <div class="bottom-panel-content">
                     <div class="bottom-panel-view terminal" id="terminal">
