--- a/index.html
+++ b/index.html
@@ -196,82 +196,82 @@
             <!-- This is the draggable handle -->
         </div>
         <div class="panel main-panel">
-            <div class="tabs">
-                <div class="tab-item active" data-filename="index.html" draggable="true">
-                    <i data-lucide="file-code" class="tab-icon"></i>
-                    <span>index.html</span>
-                    <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
-                </div>
-                <div class="tab-item" data-filename="style.css" draggable="true">
-                    <i data-lucide="file-type" class="tab-icon"></i>
-                    <span>style.css</span>
-                    <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
-                </div>
-                <div class="tab-item" data-filename="main.js" draggable="true">
-                    <i data-lucide="braces" class="tab-icon"></i>
-                    <span>main.js</span>
-                    <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
-                </div>
-                <button class="split-panel-btn" aria-label="Split panel vertically">
-                    <i data-lucide="columns-2"></i>
-                </button>
-                <button class="split-panel-btn split-horizontal" aria-label="Split panel horizontally">
-                    <i data-lucide="rows-2"></i>
-                </button>
-            </div>
-            <div class="breadcrumb-bar hidden">
-                <div class="breadcrumbs">
-                    <!-- Breadcrumbs will be dynamically inserted here -->
-                </div>
-                <div class="breadcrumb-actions">
-                    <button class="header-action-btn" aria-label="More Actions">
-                        <i data-lucide="more-vertical"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="split-container" id="main-split-container">
-                <div class="split-pane" data-pane-id="main-pane-1">
+            <div id="main-split-container" class="split-container">
+                <div class="split-pane has-tabs" data-pane-id="main-pane-1">
+                    <div class="tabs">
+                        <div class="tab-item active" data-filename="index.html" draggable="true">
+                            <i class="tab-icon" data-lucide="file-code"></i>
+                            <span>index.html</span>
+                            <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
+                        </div>
+                        <div class="tab-item" data-filename="style.css" draggable="true">
+                            <i class="tab-icon" data-lucide="file-type"></i>
+                            <span>style.css</span>
+                            <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
+                        </div>
+                        <div class="tab-item" data-filename="main.js" draggable="true">
+                            <i class="tab-icon" data-lucide="braces"></i>
+                            <span>main.js</span>
+                            <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
+                        </div>
+                        <button class="split-panel-btn" aria-label="Split panel vertically">
+                            <i data-lucide="columns-2"></i>
+                        </button>
+                        <button class="split-panel-btn split-horizontal" aria-label="Split panel horizontally">
+                            <i data-lucide="rows-2"></i>
+                        </button>
+                    </div>
+                    <div class="breadcrumb-bar hidden">
+                        <div class="breadcrumbs">
+                            <!-- Breadcrumbs will be dynamically inserted here -->
+                        </div>
+                        <div class="breadcrumb-actions">
+                            <button class="header-action-btn" aria-label="More Actions">
+                                <i data-lucide="more-vertical"></i>
+                            </button>
+                        </div>
+                    </div>
                     <div class="editor-content">
                         <p>This is where the content of the selected file will be displayed.</p>
                     </div>
                 </div>
             </div>
-            <div class="resizer resizer-horizontal" id="terminal-drag-handle">
+            <div id="terminal-drag-handle" class="resizer resizer-horizontal">
                 <!-- This is the draggable handle for the terminal -->
             </div>
-            <div class="bottom-panel" id="bottom-panel">
-                <div class="tabs" id="bottom-tabs">
+            <div id="bottom-panel" class="bottom-panel">
+                <div id="bottom-tabs" class="tabs">
                     <div class="tab-item active" data-view="terminal" draggable="true">
-                        <i data-lucide="terminal-square" class="tab-icon"></i>
+                        <i class="tab-icon" data-lucide="terminal-square"></i>
                         <span>Terminal</span>
                         <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
                     </div>
                     <div class="tab-item" data-view="logs" draggable="true">
-                        <i data-lucide="list-checks" class="tab-icon"></i>
+                        <i class="tab-icon" data-lucide="list-checks"></i>
                         <span>Logs</span>
                         <button class="tab-close-btn" aria-label="Close tab"><i data-lucide="x"></i></button>
                     </div>
                 </div>
                 <div class="bottom-panel-content">
-                    <div class="bottom-panel-view terminal" id="terminal">
-                        <div class="terminal-output" id="terminal-output">
-<pre>
+                    <div id="terminal" class="bottom-panel-view terminal">
+                        <div id="terminal-output" class="terminal-output">
+                            <pre>
 
 ███╗   ███╗███████╗██████╗ ██╗ █████╗ ██╗   ██╗██╗
 ████╗ ████║██╔════╝██╔══██╗██║██╔══██╗██║   ██║██║
 ██╔████╔██║█████╗  ██║  ██║██║███████║██║   ██║██║
 ██║╚██╔╝██║██╔══╝  ██║  ██║██║██╔══██║██║   ██║██║
 ██║ ╚═╝ ██║███████╗██████╔╝██║██║  ██║╚██████╔╝██║
-╚═╝     ╚═╝╚══════╝╚═════╝ ╚═╝╚═╝  ╚═╝ ╚═════╝ ╚═╝    
+╚═╝     ╚═╝╚══════╝╚═════╝ ╚═╝╚═╝  ╚═╝ ╚═════╝ ╚═╝
 </pre>
                             <p>Welcome to MediaUI. Type 'help' for a list of commands.</p>
                             <div class="terminal-input-line">
                                 <span class="terminal-prompt">&gt;</span>
-                                <input type="text" id="terminal-input" class="terminal-input" autofocus>
+                                <input id="terminal-input" type="text" class="terminal-input" autofocus />
                             </div>
                         </div>
                     </div>
-                    <div class="bottom-panel-view logs-panel hidden" id="logs">
+                    <div id="logs" class="bottom-panel-view logs-panel hidden">
                         <button id="clear-logs-btn" class="panel-action-btn" aria-label="Clear Logs"><i data-lucide="trash-2"></i></button>
                     </div>
                 </div>
