Add markdown support and enhance panel styling

--- a/panels3.html
+++ b/panels3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FileUI - Panels v3</title>
     <link rel="stylesheet" href="css/panels3.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
 </head>
 <body>
     <header class="main-header">
