Update FileUI style guide with refined design
- Start with light mode by default instead of dark mode
- Change accent color to pastel green throughout
- Further dim light mode backgrounds for better eye comfort
- Implement subtle scrollbars that only show on hover
- Disable horizontal scrolling globally
- Add 10 more icons to icon library (save, refresh, filter, etc.)
- Increase font sizes in navigation and control panels for better readability
- Remove all borders/strokes - use background colors for visual hierarchy
- Create memory documentation file (CLAUDE.md) with current configuration

--- a/index.html
+++ b/index.html
@@ -4,124 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FileUI - Version Explorer</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 40px;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-            background: #1e1e1e;
-            color: #cccccc;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        h1 {
-            color: #ffffff;
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-        .subtitle {
-            color: #969696;
-            font-size: 1.2em;
-            margin-bottom: 40px;
-        }
-        .version-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
-        .version-card {
-            background: #252526;
-            border: 1px solid #3c3c3c;
-            border-radius: 8px;
-            padding: 30px;
-            transition: all 0.3s ease;
-        }
-        .version-card:hover {
-            background: #2d2d30;
-            border-color: #007acc;
-            transform: translateY(-2px);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
-        }
-        .version-number {
-            color: #007acc;
-            font-size: 0.9em;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-bottom: 10px;
-        }
-        .version-title {
-            color: #ffffff;
-            font-size: 1.5em;
-            margin-bottom: 15px;
-        }
-        .version-description {
-            color: #969696;
-            margin-bottom: 20px;
-        }
-        .version-features {
-            list-style: none;
-            padding: 0;
-            margin: 0 0 20px 0;
-        }
-        .version-features li {
-            padding: 5px 0;
-            padding-left: 20px;
-            position: relative;
-        }
-        .version-features li:before {
-            content: "•";
-            color: #4ec9b0;
-            position: absolute;
-            left: 0;
-        }
-        .version-link {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #007acc;
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: background 0.2s ease;
-        }
-        .version-link:hover {
-            background: #1a8ad4;
-        }
-        .main-card {
-            background: linear-gradient(135deg, #094771 0%, #007acc 100%);
-            border: none;
-        }
-        .main-card .version-number {
-            color: #4fc3f7;
-        }
-        .info-section {
-            background: #252526;
-            border-radius: 8px;
-            padding: 30px;
-            margin-top: 40px;
-        }
-        .info-section h2 {
-            color: #ffffff;
-            margin-bottom: 15px;
-        }
-        .tech-stack {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .tech-badge {
-            background: #3c3c3c;
-            padding: 5px 15px;
-            border-radius: 20px;
-            font-size: 0.9em;
-            color: #cccccc;
-        }
-    </style>
+    <link rel="stylesheet" href="version-explorer.css">
 </head>
 <body>
     <div class="container">
